2010-12-30  Pavel Podivilov  <podivilov@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: call stack shows "Paused on a JavaScript breakpoint" when stepping.
        https://bugs.webkit.org/show_bug.cgi?id=51748

        * inspector/front-end/CallStackSidebarPane.js:
        (WebInspector.CallStackSidebarPane.prototype.update):
        (WebInspector.CallStackSidebarPane.prototype.registerShortcuts):
        (WebInspector.CallStackSidebarPane.prototype._scriptBreakpointHit):
        (WebInspector.CallStackSidebarPane.prototype._nativeBreakpointHit):

2010-12-30  Mikhail Naganov  <mnaganov@chromium.org>

        Reviewed by Pavel Feldman.

        Fix leak of MemoryInfo wrappers introduced in r57004 (see issue 51712).

        https://bugs.webkit.org/show_bug.cgi?id=51713

        * WebCore.gypi:
        * WebCore.pro:
        * bindings/v8/custom/V8ConsoleCustom.cpp:
        (WebCore::V8Console::memoryAccessorGetter):
        * bindings/v8/custom/V8PerformanceCustom.cpp: Copied from V8ConsoleCustom.cpp.
        (WebCore::V8Performance::memoryAccessorGetter):
        * page/Console.idl:
        * page/Performance.idl:

2010-12-30  Steve Block  <steveblock@google.com>

        Reviewed by Sam Weinig.

        Visiting macnn.com often causes SQL spew via geolocation database
        https://bugs.webkit.org/show_bug.cgi?id=51557

        If the Geolocation position cache database path has not been set, early-out
        rather than using an empty path and thus failing to open the database.
        This avoids SQL log spew.

        Also, avoid starting the database thread until the path has been set, and
        shorten the thread name to avoid warnings due to exceeding 30 characters.

        No new tests, implementation clean-up only.

        * page/GeolocationPositionCache.cpp:
        (WebCore::GeolocationPositionCache::addUser):
        (WebCore::GeolocationPositionCache::removeUser):